Add client-side fingerprint base src

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -14,7 +14,7 @@
     </div>
     <script src="js/three.js"></script>
     <script src="js/VRButton.js"></script>
-    <script src="js/client.js"></script>
+    <script src="js/fingerprint.js"></script>
 </body>
 
 </html>
