--- a/server/static/index.html
+++ b/server/static/index.html
@@ -14,6 +14,7 @@
     </div>
     <script src="js/three.js"></script>
     <script src="js/VRButton.js"></script>
+    <script src="js/client.js"></script>
     <script src="js/fingprint.js"></script>
 </body>
 
